<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_block_a_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_block_a_number"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btn_close"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_block_a_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_detail_box"
        android:hint="@string/txt_number"
        android:paddingStart="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_block_a_number" />

    <EditText
        android:id="@+id/et_block_a_number_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_detail_box"
        android:hint="@string/txt_name"
        android:paddingStart="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/et_block_a_number" />

    <TextView
        android:id="@+id/btn_block"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_blue_rounded_corner"
        android:gravity="center"
        android:text="@string/txt_block"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/et_block_a_number_name" />

</androidx.constraintlayout.widget.ConstraintLayout>