<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_smartphone_24" />

    <LinearLayout
        android:id="@+id/ll_edit_numberphone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/iv_phone">

        <TextView
            android:id="@+id/tv_enter_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_enter_phone_number"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_phone" />

        <TextView
            android:id="@+id/tv_enter_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter your country and enter your phone number"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_phone" />



        <EditText
            android:id="@+id/et_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/custom_input_phone_number"
            android:layout_marginBottom="@dimen/_12sdp"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableStart="@drawable/custom_location_focused"
            android:hint="@string/txt_your_country" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:inputType="phone"
            android:background="@drawable/custom_input_phone_number"
            android:drawablePadding="@dimen/_12sdp"
            android:drawableStart="@drawable/custom_call_focused"
            android:hint="@string/txt_enter_your_phone_number" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="#30A2E8"
        android:gravity="center"
        android:text="@string/txt_continue"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>