<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">
        <!--    allow blocking-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_allow_block"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/bg_detail_box"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_allow_blocking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_app_blocking_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_allow_blocking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_allow_blocking"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_allow_blocking"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_you_need"
                android:layout_width="274dp"
                android:layout_height="46dp"
                android:text="@string/txt_you_need_to_set_idcaller_as_your_default_dialer_for_blocking_to_work"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_allow_blocking"
                app:layout_constraintTop_toBottomOf="@id/tv_allow_blocking" />

            <TextView
                android:id="@+id/btn_set_as_default_dialer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/bg_blue_rounded_corner"
                android:gravity="center"
                android:text="@string/txt_set_as_default_dialer"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--        block spammers-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_block_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_detail_box"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_allow_block">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_block_spam_message"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:padding="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_block_spam_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_baseline_block_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_block_spam_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_block_spam_message"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/iv_block_spam_message"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_block_spam_message_content"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:text="Protect yourself from spam messages"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_block_spam_message"
                    app:layout_constraintTop_toBottomOf="@id/tv_block_spam_message" />

                <Switch
                    android:id="@+id/switch_block_spam_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_block_number_manually"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:padding="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_block_spam_message">

                <ImageView
                    android:id="@+id/iv_block_number_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_outline_call_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_block_number_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_block_spam_number"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_block_number_manually"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
